--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "mihaildev/yii2-elfinder": "*",
         "yiisoft/yii2-bootstrap4": "^2.0",
         "kartik-v/yii2-date-range": "dev-master",
-        "yii2mod/yii2-comments": "*"
+        "yii2mod/yii2-comments": "*",
+        "kartik-v/yii2-widget-datepicker": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
