--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "yiisoft/yii2-bootstrap4": "^2.0",
         "kartik-v/yii2-date-range": "dev-master",
         "yii2mod/yii2-comments": "*",
-        "kartik-v/yii2-widget-datepicker": "@dev"
+        "kartik-v/yii2-widget-datepicker": "@dev",
+        "kartik-v/yii2-widget-growl": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
