--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "kartik-v/yii2-date-range": "dev-master",
         "yii2mod/yii2-comments": "*",
         "kartik-v/yii2-widget-datepicker": "@dev",
-        "kartik-v/yii2-widget-growl": "*"
+        "boundstate/yii2-mailgun": "*",
+        "himiklab/yii2-recaptcha-widget" : "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
