--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "mihaildev/yii2-elfinder": "*",
         "yiisoft/yii2-bootstrap4": "^2.0",
         "kartik-v/yii2-date-range": "dev-master",
-        "yii2mod/yii2-comments": "*",
         "kartik-v/yii2-widget-datepicker": "@dev",
         "boundstate/yii2-mailgun": "*",
-        "himiklab/yii2-recaptcha-widget" : "*"
+        "himiklab/yii2-recaptcha-widget" : "*",
+        "rmrevin/yii2-comments": "~1.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
