--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "kartik-v/yii2-date-range": "dev-master",
         "kartik-v/yii2-widget-datepicker": "@dev",
         "himiklab/yii2-recaptcha-widget" : "*",
-        "rmrevin/yii2-comments": "~1.4",
+        "yii2mod/yii2-comments": "*",
         "mailgun/mailgun-php": "^3.0",
         "kriswallsmith/buzz": "^1.0",
         "nyholm/psr7": "^1.2"
