--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "rmrevin/yii2-comments": "~1.4",
         "mailgun/mailgun-php": "^3.0",
         "kriswallsmith/buzz": "^1.0",
-        "nyholm/psr7": "^1.2"
+        "nyholm/psr7": "^1.2",
+        "mervick/yii2-under-construction": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
