--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "kriswallsmith/buzz": "^1.0",
         "nyholm/psr7": "^1.2",
         "mervick/yii2-under-construction": "~1.0",
-        "boundstate/yii2-mailgun": "^1.0"
+        "boundstate/yii2-mailgun": "^1.0",
+        "rmrevin/yii2-comments": "~1.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
